Fix definition list alignment

--- a/styles.css
+++ b/styles.css
@@ -154,18 +154,26 @@
     font-size: var(--pem-definition-desc-font-size);
     font-style: var(--pem-definition-desc-font-style);
     font-weight: var(--pem-definition-desc-font-weight);
-    margin-left: 2em;
     margin-bottom: 0.25em;
-    position: relative;
+    margin-inline-start: 0;
     text-align: var(--pem-definition-desc-align);
     text-decoration: var(--pem-definition-desc-text-decoration);
 }
 
-.markdown-preview-view .pem-list-definition-desc::before {
+.markdown-preview-view .pem-definition-desc-list {
+    list-style-position: outside;
+    list-style-type: disc;
+    margin: 0;
+    padding-inline-start: 0;
+}
+
+.markdown-preview-view .pem-definition-desc-item {
+    margin-block: var(--list-spacing, 0.075em);
+}
+
+.markdown-preview-view .pem-definition-desc-item::marker {
     color: var(--pem-definition-desc-marker-color);
-    content: var(--pem-definition-desc-marker-content);
-    left: -1em;
-    position: absolute;
+    content: var(--pem-definition-desc-marker-content) " ";
 }
 
 .cm-pem-definition-paragraph .pem-list-marker {
